[gd_scene load_steps=7 format=3 uid="uid://c2yhnn5sgorl2"]

[ext_resource type="Script" uid="uid://c2f83t74v6g54" path="res://scripts/entities/desk_lamp.gd" id="1_desklamp"]
[ext_resource type="Texture2D" uid="uid://c0o6okio0enb0" path="res://assets/sprites/desk_lamp.png" id="2_desklamp"]
[ext_resource type="Texture2D" uid="uid://bk7hjfv5de2nf" path="res://assets/lighting/cone_light.jpg" id="3_dcy5r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_desklamp_collision"]
size = Vector2(44, 49.5)

[sub_resource type="SpriteFrames" id="SpriteFrames_desklamp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_desklamp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_desklamp_hitbox"]
size = Vector2(44, 50)

[node name="DeskLamp" type="CharacterBody2D" groups=["enemies"]]
script = ExtResource("1_desklamp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_desklamp_collision")

[node name="EnemyBody" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.596078, 0, 0.109804, 1)
metadata/_edit_use_anchors_ = true

[node name="FlashOverlay" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.5
offset_top = -50.5
offset_right = 50.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(-52, -52)
collision_layer = 2
collision_mask = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="HitBox"]
light_mask = 0
visibility_layer = 2
position = Vector2(52, 66)
sprite_frames = SubResource("SpriteFrames_desklamp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(52, 52)
shape = SubResource("RectangleShape2D_desklamp_hitbox")

[node name="PointLight2D" type="PointLight2D" parent="HitBox"]
light_mask = 0
position = Vector2(86, 64)
rotation = -1.0197678
scale = Vector2(1.0611933, 1.3429564)
energy = 0.74
texture = ExtResource("3_dcy5r")
texture_scale = 0.11
